CompilerConstruction/Chapter05/YACCTester/YACCTester/YACC/Expressions.output
State 1 conflicts: 1 reduce/reduce


Grammar

    0 $accept: COMMAND $end

    1 COMMAND: EXP
    2        | error

    3 EXP: EXP ADDOP TERM
    4    | TERM

    5 ADDOP: '+'
    6      | '-'

    7 TERM: TERM '*' FACTOR

    8 $@1: /* empty */

    9 TERM: TERM $@1 '/' FACTOR
   10     | FACTOR
   11     | error

   12 FACTOR: NUMBER
   13       | '(' EXP ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13
')' (41) 13
'*' (42) 7
'+' (43) 5
'-' (45) 6
'/' (47) 9
error (256) 2 11
NUMBER (258) 12


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
COMMAND (11)
    on left: 1 2, on right: 0
EXP (12)
    on left: 3 4, on right: 1 3 13
ADDOP (13)
    on left: 5 6, on right: 3
TERM (14)
    on left: 7 9 10 11, on right: 3 4 7 9
$@1 (15)
    on left: 8, on right: 9
FACTOR (16)
    on left: 12 13, on right: 7 9 10


state 0

    0 $accept: . COMMAND $end

    error   shift, and go to state 1
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    COMMAND  go to state 4
    EXP      go to state 5
    TERM     go to state 6
    FACTOR   go to state 7


state 1

    2 COMMAND: error .
   11 TERM: error .

    $end      reduce using rule 2 (COMMAND)
    $end      [reduce using rule 11 (TERM)]
    $default  reduce using rule 11 (TERM)


state 2

   12 FACTOR: NUMBER .

    $default  reduce using rule 12 (FACTOR)


state 3

   13 FACTOR: '(' . EXP ')'

    error   shift, and go to state 8
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    EXP     go to state 9
    TERM    go to state 6
    FACTOR  go to state 7


state 4

    0 $accept: COMMAND . $end

    $end  shift, and go to state 10


state 5

    1 COMMAND: EXP .
    3 EXP: EXP . ADDOP TERM

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12

    $default  reduce using rule 1 (COMMAND)

    ADDOP  go to state 13


state 6

    4 EXP: TERM .
    7 TERM: TERM . '*' FACTOR
    9     | TERM . $@1 '/' FACTOR

    '*'  shift, and go to state 14

    '/'       reduce using rule 8 ($@1)
    $default  reduce using rule 4 (EXP)

    $@1  go to state 15


state 7

   10 TERM: FACTOR .

    $default  reduce using rule 10 (TERM)


state 8

   11 TERM: error .

    $default  reduce using rule 11 (TERM)


state 9

    3 EXP: EXP . ADDOP TERM
   13 FACTOR: '(' EXP . ')'

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    ')'  shift, and go to state 16

    ADDOP  go to state 13


state 10

    0 $accept: COMMAND $end .

    $default  accept


state 11

    5 ADDOP: '+' .

    $default  reduce using rule 5 (ADDOP)


state 12

    6 ADDOP: '-' .

    $default  reduce using rule 6 (ADDOP)


state 13

    3 EXP: EXP ADDOP . TERM

    error   shift, and go to state 8
    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    TERM    go to state 17
    FACTOR  go to state 7


state 14

    7 TERM: TERM '*' . FACTOR

    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    FACTOR  go to state 18


state 15

    9 TERM: TERM $@1 . '/' FACTOR

    '/'  shift, and go to state 19


state 16

   13 FACTOR: '(' EXP ')' .

    $default  reduce using rule 13 (FACTOR)


state 17

    3 EXP: EXP ADDOP TERM .
    7 TERM: TERM . '*' FACTOR
    9     | TERM . $@1 '/' FACTOR

    '*'  shift, and go to state 14

    '/'       reduce using rule 8 ($@1)
    $default  reduce using rule 3 (EXP)

    $@1  go to state 15


state 18

    7 TERM: TERM '*' FACTOR .

    $default  reduce using rule 7 (TERM)


state 19

    9 TERM: TERM $@1 '/' . FACTOR

    NUMBER  shift, and go to state 2
    '('     shift, and go to state 3

    FACTOR  go to state 20


state 20

    9 TERM: TERM $@1 '/' FACTOR .

    $default  reduce using rule 9 (TERM)
